# Thalamus

./: .gitignore  20260305-fast.json  20260305.json  20260330.json  20260406.json  20260506.json  20260513-pupil.json  20260513.json  20260518.json  20260527.json  =0.4.0  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  FLIR_GenTL-stream.xml  HCRippleReach.json  Jenkinsfile  PKG-INFO  README.md  README_reset_cameras.md  Rec_Stim.c  Rec_Stim.cpp  SpinView_QT_log  Spinnaker_GenTL-stream.xml  VimbaUSBTL-stream.xml  a.csv  a_to_lib.cmake  analog_test.py  aruco-top-alexrig.txt  aruco_check.py  aruco_test.json  backup.patch  backupcommit  beh_testing.json  bowser  bowser.json  build_boost.sh  build_boost_clang.bat  build_boost_msvc.bat  bump.py  (+85 more)
.github/workflows/: build-and-release.yml  c-cpp.yml  docs.yml  linux.yml  mac.yml  main.yml  test.yml  update-devel-no-native.yml  windows.yml
SimpleUseCase/: AnalyzingThalamusDataset  ReadME.md  ReadMe.md  SimpleUseREADME  SimpleUseREADME.md
SimpleUseCase/Analyze a Thalamus Dataset/: ClosedLoopPerformanceTest.h5  ClosedLoopTest.mlx  ReadME.md
SimpleUseCase/Figure 9/: ReadME.md  Thalamus_Figure9.mlx
SimpleUseCase/Heart Rate Variability/: ReadME.md
SimpleUseCase/Tutorial 3/: ReadME.md  Thalamus_Figure5.html  Thalamus_Figure5.mlx
SimpleUseCase/Tutorial1/: ReadME  ReadME.md
SimpleUseCase/Tutorial2/: ReadME.md  SimpleUseCase.json
_sources/: eye_calibration.rst.txt  index.rst.txt  tools.rst.txt
_sources/examples/: index.rst.txt
_sources/nodes/: ceci.rst.txt  index.rst.txt  runner2.rst.txt
_static/: custom.css
ceci/: CMakeLists.txt  Rec_Stim.cpp  Rec_Stim.hpp  ceci_stim_task.py  ext.cpp  ext.py
cmake/: boost.cmake  cairo.cmake  comedi.cmake  crashpad.cmake  ffmpeg.cmake  glib.cmake  grpc.cmake  hdf5.cmake  inja.cmake  kfr.cmake  libffi.cmake  llvm.cmake  lua.cmake  luajit.cmake  opencv.cmake  perfetto.cmake  sdl.cmake  vulkan.cmake  zlib_processed.cmake
docker/: ubuntu-18.04.dockerfile  uploader.dockerfile  windows.dockerfile
docs/: closed_loop_decoder.md  joystick_intro_task_guide.md  joystick_paddle_intro_task_guide.md  reward_schedule_configuration.md  rust_bci_patch.md  target_schedule_plan.md
docs/source/: concepts.rst  conf.py  eye_calibration.rst  glossary.rst  index.rst  plugins.rst  quickstart.rst  task_controller.rst  tools.rst  troubleshooting.rst  usage.rst
dotnet/: NuGet.Config  dotnet.sln
dotnet/dotnet/: AnalogNode.cs  AsyncQueue.cs  DelsysNode.cs  MainThread.cs  Node.cs  NodeGraph.cs  ObservableCollection.cs  ObservableJObject.cs  Program.cs  StateManager.cs  TextNode.cs  Util.cs  dotnet.csproj
examples/: README.md  analyze_recording.py  capture_summary.py  closed_loop_demo.py  closed_loop_latency.py  event_markers.py  hello_world_task.py  index.html  multinode_recording.py  synthetic_recording.py  synthetic_video.py  ulong_counter.py
go/: Makefile  generate.py  go.mod  go.sum  main.go  prepare.py
java/: create_stub.m  read_analog_stream.m  request_analog.m  settings.gradle
java/app/: build.gradle
js/: upload-artifact.js
nodes/: algebra.html  analog.html  aruco.html  brainproducts.html  catalog.html  ceci.html  channel_picker.html  chessboard.html  delsys.html  distortion.html  ffmpeg.html  frequency.html  genicam.html  hand_engine.html  hexascope.html  index.html  intan.html  log.html  loop_test.html  lua.html  nidaq.html  nidaq_out.html  normalize.html  oculomatic.html  ophanim.html  pupil.html  remote.html  remote_log.html  ros2.html  runner.html  runner2.html  sample_monitor.html  spikeglx.html  stim_printer.html  storage.html  storage2.html  sync.html  task_controller.html  test_pulse.html  thread_pool.html  (+6 more)
octave/: thalamus2mat.m  thalamus_readrecord.m
old_configs/: test_archive.json
patches/: cairo  comedi  ffmpeg  luajit  protobuf  protobuf.debug
proto/: delsys.proto  ophanim.proto  rust_task.proto  task_controller.proto  thalamus.proto  util.proto
proto/trace_event/: trace_event_grpc.proto
rust/: Cargo.toml  README.md  build.rs
rust/joystick_task/: Cargo.toml  build.rs  fifo.csv  fifo_latency.csv  fifo_or.csv  fifo_or_latency.csv  fifo_paced.csv  fifo_paced_latency.csv  immediate.csv  immediate_latency.csv  immediate_or.csv  immediate_or_latency.csv
rust/joystick_task/src/: clock.rs  config.rs  constants.rs  control.rs  events.rs  grpc.rs  input.rs  main.rs  mirror.rs  proto.rs  reward.rs  state.rs
rust/joystick_task/src/render/: diode.rs  mod.rs  spike.rs
rust/src/: api.rs  aruco_node.rs  ball_node.rs  ffi.rs  lib.rs  mocap_node.rs  wakers.rs
src/: AOSystemAPI.h  AOTypes.h  NIDAQmx.h  algebra_node.cpp  algebra_node.h  algebra_node.hpp  alpha_omega_node.cpp  alpha_omega_node.h  alpha_omega_node.hpp  analog_node.cpp  analog_node.hpp  aruco_node.cpp  aruco_node.h  aruco_node.hpp  base64.cpp  base64.hpp  base_node.cpp  base_node.h  base_node.hpp  brainproducts_node.cpp  brainproducts_node.hpp  calculator.h  calculator.hpp  cbw.h  ceci_node.cpp  ceci_node.hpp  channel_picker_node.cpp  channel_picker_node.h  channel_picker_node.hpp  chessboard_node.cpp  chessboard_node.h  chessboard_node.hpp  delsys_node.cpp  delsys_node.hpp  distortion_node.cpp  distortion_node.h  distortion_node.hpp  genicam_node.cpp  genicam_node.h  genicam_node.hpp  (+122 more)
src/brain_products/: AmplifierSDK.h  Amplifier_LIB.h  PDll.h  SDK.h
src/shaders/: texture.frag  texture.vert
src/thalamus/: JoystickMouseControl.ino  algebra_node.cpp  algebra_node.hpp  alpha_omega_node.cpp  alpha_omega_node.hpp  analog_node.cpp  analog_node.hpp  aruco_node.cpp  (+138 more)
test/: test_dataframe.py
thalamus/: __init__.py  build.py  cache_manager.py  cflags.py  channels_item_model.py  config.py  dataframe.py  eye_calibration.py  hydrate.py  image_viewer.py  iterable_queue.py  observable_item_models.py  oculomatic_tool.py  ophanim_pb2.pyi  orchestration.py  process.py  qt.py  record_reader.py  record_reader2.py  record_writer.py  registry.py  resources.py  sed.py  servicer.py  task_controller_pb2.pyi  thalamus_pb2.pyi  thalamus_pb2_grpc.pyi  thalamus_stub.py  thread.py  usersettings.py  util.py  util_pb2.pyi  video_writer.py
(+222 files in other folders)
