[project]
name = "thalamus"
version = "1.0.19"
description = "Data Acquisition and Behavioral Experiment Platform"
license = "GPL-3.0-only"
license-file = "LICENSE"
maintainer = "Jarl Haggerty"
maintainer_email = "Jarl.Haggerty@Pennmedicine.penn.edu"
requires-python = ">=3.10"

[build-system]
requires = [ "setuptools", "grpcio-tools", "toml",]
backend-path = [ ".",]
build-backend = "thalamus.build"
